# stab_bot

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
routes/: paying_route.py  pictures_r.py
services/: mongo.py  picture_creation.py  prompt_enhancing.py  user_service.py
