[tool.poetry]
name = "stability-3-0"
version = "0.1.0"
description = ""
authors = ["Viacheslav Beatum <podarkiprod@gmail.com>"]
readme = "README.md"
packages = [{include = "stability_3"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
loguru = "^0.7.3"
httpx = "^0.28.1"
openai = "^1.59.4"
aioredis = "^2.0.1"
motor = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
